# kotlin-multiplatform-template

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.fleet/: receipt.json
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: module.publication.gradle.kts  root.publication.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/commonMain/kotlin/: App.kt
composeApp/src/desktopMain/kotlin/: main.kt
composeApp/src/wasmJsMain/resources/: index.html
docs/: testing.md
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
protos/src/test/: hello_world_test.js
server/: build.gradle.kts
server/grpc-server/: build.gradle.kts
server/http-server/: build.gradle.kts
shared/: build.gradle.kts
shared/common/: build.gradle.kts
shared/common/src/commonMain/kotlin/util/: UUID.kt
shared/common/src/commonTest/kotlin/util/: UUIDTest.kt
shared/common/src/jvmMain/kotlin/util/: UUID.jvm.kt
shared/common/src/jvmTest/kotlin/util/: UUIDJvmTest.kt
shared/feature/: build.gradle.kts
shared/feature/src/commonMain/kotlin/: FeatureEntry.kt
shared/feature/src/commonTest/kotlin/: FeatureEntryTest.kt
structurizr-ksp/: build.gradle.kts
structurizr-ksp/src/main/kotlin/: StructurizrProcessor.kt  UseCaseFlowProcessor.kt
structurizr-ksp/src/main/kotlin/util/: Dependency.kt  Extension.kt  FlowNode.kt  MermaidBuilder.kt
stub/: build.gradle.kts
stub-lite/: build.gradle.kts
stub/src/main/kotlin/io/grpc/examples/routeguide/: BUILD.bazel
(+46 files in other folders)
