load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

licenses(["notice"])

package(default_visibility = ["//kotlin-multiplatform-template:__subpackages__"])

kt_jvm_library(
    name = "route_guide_stub",
    srcs = [
        "Database.kt",
        "Points.kt"
    ],
    deps = [
        "//kotlin-multiplatform-template/protos/src/main/proto/io/grpc/examples/routeguide:route_guide_java_proto",
        "//kotlin-multiplatform-template/protos/src/main/proto/io/grpc/examples/routeguide:route_guide_kt_grpc",
        "@com_google_protobuf//:protobuf_java_util"
    ],
)
